<resources>
    <string name="app_name">Bishkoteka</string>
    <string name="password">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="phone_number">Дата рождения</string>
    <string name="username">Username</string>
    <string name="name">Имя</string>
    <string name="sign_up">Регистрация</string>
    <string name="already_have_an_account_sign_in">Уже есть аккаунт? Войти</string>
    <string name="sign_in">Войти</string>
    <string name="don_t_have_an_account_sign_up">Ещё не зарегестрированы? Регистрация</string>
    <string name="birth_date">2023-03-06</string>
    <string name="last_name">Фамилия</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="lorem_ipsum">Lorem ipsum — классический текст-«рыба». Является искажённым отрывком из философского трактата Марка Туллия Цицерона «О пределах добра и зла», написанного в 45 году до н. э. на латинском языке, обнаружение сходства приписывается Ричарду МакКлинтоку</string>

    <string-array name="entry_array">
        <item>свободный</item>
        <item>по приглашению</item>
        <item>по регистрации</item>
    </string-array>

</resources>