<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_name"
        android:text="@string/name"
        style="@style/H2"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/username"
        style="@style/H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultButton"
        android:text="@string/log_out"
        android:layout_marginTop="30dp" />

</LinearLayout>